Fixed height to search button with overflow.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -490,7 +490,8 @@ header::before {
   font-size: 16px;
   line-height: 19px;
   text-align: center;
-  height: 100%;
+  height: 40px;
+  overflow: auto;
   width: 160px;
   padding: 8px;
   margin: 0;
@@ -506,7 +507,7 @@ header::before {
   min-width: 140px;
   /*todo otherwise in safari the "search" input width and height smaller on the size of the border width. Why?*/
   width: 356px;
-  height: 100%;
+  height: 40px;
   padding: 0;
   padding-left: 50px;
   padding-top: 8px;
